# voice-game-control

./: .env.example  .gitignore  LICENSE  README.md  package-lock.json  package.json  requirements.txt  setup.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  sidecar.rs
src-ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src-ui/src/: App.vue  main.ts  style.css
src-ui/src/components/: GameControlPanel.vue  VoiceprintPanel.vue
src-ui/src/composables/: useApi.ts
voice_game_control/: __init__.py  config.py  engine.py  main.py
voice_game_control/api/: game_routes.py  voiceprint_routes.py
voice_game_control/pipeline/: voiceprint_filter.py
voice_game_control/platform/: __init__.py  game_action_mapper.py  hotkey_listener.py  keyboard_output.py  microphone.py
voice_game_control/platform/voiceprint/: __init__.py  base.py  factory.py  local_service.py
voice_game_control/voiceforge/core/: config.py  extension.py  lifecycle.py
voice_game_control/voiceforge/extensions/: base_asr.py
voice_game_control/voiceforge/extensions/providers/: __init__.py
voice_game_control/voiceforge/extensions/providers/aliyun/: asr_qwen.py
