[package]
name = "voice-game-control"
version = "0.1.0"
edition = "2021"
description = "VoiceGameControl - Game Voice Control Desktop App"
license = "MIT"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portpicker = "0.1"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
